# NovaThrust

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: CMakeLists.txt  multi_tube_pde_simulation.cpp  pde_flight_simulation.cpp  performance_metrics_example.cpp  thrust_calculator_example.cpp
include/data_handling/: real_time_streaming.hpp  serialization.hpp
include/detonation_model/: cj_state_calculator.hpp  znd_solver.hpp
include/flight_dynamics/: aerodynamics_model.hpp  atmospheric_model.hpp  environmental_effects.hpp  flight_dynamics_integrator.hpp  rigid_body_dynamics.hpp  trajectory_integrator.hpp
include/fluid_dynamics/: quasi_1d_solver.hpp  shock_tracker.hpp
include/multi_tube_pde/: manifold_system.hpp  multi_tube_configuration.hpp  pde_tube.hpp  thrust_vectoring_system.hpp  tube_interaction_model.hpp  valve_controller.hpp
include/numerical_methods/: linear_algebra.hpp  linear_algebra.inl  ode_solvers.hpp  pde_solvers.hpp
include/performance/: memory_optimization.hpp  parallelization.hpp  vectorization.hpp  vectorization.inl
include/performance_metrics/: detonation_parameters_calculator.hpp  performance_metrics_calculator.hpp  specific_impulse_calculator.hpp  structural_stress_estimator.hpp  thermal_load_estimator.hpp  thrust_calculator.hpp
include/thermodynamics/: eos_calculator.hpp
include/tvc/: control_law.hpp  performance_objectives.hpp  pulse_optimizer.hpp  state_estimator.hpp  tvc_system.hpp
src/: simulation_engine.cpp
src/flight_dynamics/: aerodynamics_model.cpp  atmospheric_model.cpp  environmental_effects.cpp  flight_dynamics_integrator.cpp  rigid_body_dynamics.cpp  trajectory_integrator.cpp
src/multi_tube_pde/: manifold_system.cpp  multi_tube_configuration.cpp  pde_tube.cpp  thrust_vectoring_system.cpp  tube_interaction_model.cpp  valve_controller.cpp
src/numerical_methods/: linear_algebra.cpp  ode_solvers.cpp  pde_solvers.cpp
src/performance_metrics/: detonation_parameters_calculator.cpp  performance_metrics_calculator.cpp  specific_impulse_calculator.cpp  structural_stress_estimator.cpp  thermal_load_estimator.cpp  thrust_calculator.cpp
src/tvc/: control_law.cpp  performance_objectives.cpp  pulse_optimizer.cpp  state_estimator.cpp  tvc_system.cpp
tests/: CMakeLists.txt  thrust_calculator_test.cpp
